--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -90,6 +90,11 @@
           .title {
             display: block;
             margin-bottom: 4px;
+
+            width: 150px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
           }
           .desc {
             opacity: 0.7;
