--- a/src/pages/for-students/registre/Registre.scss
+++ b/src/pages/for-students/registre/Registre.scss
@@ -45,6 +45,7 @@
         .date {
           min-width: 280px;
           width: 100% !important;
+          height: 100%;
           padding: 0;
           border-color: transparent;
           background: #fff;
